Added hero section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <title>Front-End Developer | Jen Strayer</title>
   </head>
   <body>
-    <h1>Jen Strayer</h1>
+    <div class="hero">
+      <h1 class="pb-2">Jen Strayer</h1>
+      <h2 class="pb-5">Front-End Developer Based In Nashville, TN</h2>
+      <a href="#" class="btn btn-success contact-button">Contact Me</a>
+    </div>
   </body>
 </html>
