Added projects section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,55 @@
     <div class="hero">
       <h1 class="pb-2">Jen Strayer</h1>
       <h2 class="pb-5">Front-End Developer Based In Nashville, TN</h2>
-      <a href="#" class="btn btn-success contact-button">Contact Me</a>
+      <a
+        href="#"
+        class="btn btn-success primary-button"
+        title="Contact Jen Strayer"
+        >Contact Me</a
+      >
+    </div>
+    <h3 class="text-center mt-5 mb-5">Featured Projects</h3>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="/images/weather.png" class="img-fluid" />
+        </div>
+        <div class="col-md-6">
+          <div class="project-description">
+            <h2>Weather App</h2>
+            <p class="text-muted">
+              Designed using vanilla javascript, HTML and CSS
+            </p>
+            <a
+              href="https://loving-newton-1b270c.netlify.app/"
+              target="_blank"
+              class="btn btn-success primary-button mt-4"
+              title="Launch Weather App"
+              >Launch Weather App</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5 mb-5">
+        <div class="col-md-6 order-md-1 order-sm-2">
+          <div class="project-description">
+            <h2>Women's Ice Hockey Page</h2>
+            <p class="text-muted">
+              Designed using vanilla javascript, HTML and CSS
+            </p>
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-23e57cdf-f4a8-49c9-97a7-289a0c522fda/projects/694787"
+              target="_blank"
+              class="btn btn-success primary-button mt-4"
+              title="Launch Hockey Page"
+              >Launch Hockey Page</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6 order-md-2 order-sm-1">
+          <img src="/images/hockey.png" class="img-fluid" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
