added links to images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="/images/weather.png" class="img-fluid" />
+          <a
+            href="https://loving-newton-1b270c.netlify.app/"
+            target="_blank"
+            title="Launch Weather App"
+            ><img src="/images/weather.png" alt="Weather App" class="img-fluid"
+          /></a>
         </div>
         <div class="col-md-6">
           <div class="project-description">
@@ -62,7 +67,7 @@
         </div>
       </div>
       <div class="row mt-5 mb-5">
-        <div class="col-md-6 order-md-1 order-sm-2">
+        <div class="col-md-6 order-md-1 order-2">
           <div class="project-description">
             <h2>Women's Ice Hockey Page</h2>
             <p class="text-muted">
@@ -77,8 +82,16 @@
             >
           </div>
         </div>
-        <div class="col-md-6 order-md-2 order-sm-1">
-          <img src="/images/hockey.png" class="img-fluid" />
+        <div class="col-md-6 order-md-2 order-1">
+          <a
+            href="https://www.shecodes.io/workshops/shecodes-basics-23e57cdf-f4a8-49c9-97a7-289a0c522fda/projects/694787"
+            target="_blank"
+            title="Launch Hockey Page"
+            ><img
+              src="/images/hockey.png"
+              alt="Ice Hockey Skates And Gloves"
+              class="img-fluid"
+          /></a>
         </div>
       </div>
     </div>
