--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         >Contact Me</a
       >
     </div>
-    <h3 class="text-center mt-5 mb-5">Featured Projects</h3>
+    <h3 class="text-center mt-5 mb-5" id="projects">Featured Projects</h3>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
