added portfolio page

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <title>About Me | Jen Strayer</title>
   </head>
   <body>
-    <div class="hero">
+    <div class="secondary-hero">
       <h1 class="mb-5">About Me</h1>
       <a
         href="#"
@@ -44,14 +44,14 @@
           <div class="about-description">
             <h2 class="pb-2">Hi, I'm Jen Strayer</h2>
             <p class="text-muted">
-              Based just outside of Nashville, TN, I am Front-End Web Designer.
-              I hold a Music Education and Euphonium Performance degree from
+              Based just outside of Nashville, TN, I am Front-End Web Developer.
+              I hold a degree in Music Education and Euphonium Performance from
               Ithaca College in Ithaca, NY, and, after teaching for five years
-              throughout Middle Tennessee, I made the transition to web design.
-              Outside of playing the euphonium, I also enjoy playing the
-              ukulele, listening to Broadway musicals, and playing and watching
-              ice hockey - often cheering on my favorite team, the Nashville
-              Predators!
+              throughout Middle Tennessee, I made the transition into website
+              development. Outside of playing the euphonium, I also enjoy
+              playing the ukulele, listening to Broadway musicals, and playing
+              and watching ice hockey - often cheering on my favorite team, the
+              Nashville Predators!
             </p>
             <a
               href="/#projects"
