--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
         <div class="col-md-6">
           <div class="project-description">
             <h2>Weather App</h2>
-            <p class="text-muted">
-              Designed using vanilla javascript, HTML and CSS
-            </p>
+            <p class="text-muted">Designed using Javascript, HTML and CSS</p>
             <a
               href="https://loving-newton-1b270c.netlify.app/"
               target="_blank"
@@ -70,9 +68,7 @@
         <div class="col-md-6 order-md-1 order-2">
           <div class="project-description">
             <h2>Women's Ice Hockey Page</h2>
-            <p class="text-muted">
-              Designed using vanilla javascript, HTML and CSS
-            </p>
+            <p class="text-muted">Designed using Javascript, HTML and CSS</p>
             <a
               href="https://www.shecodes.io/workshops/shecodes-basics-23e57cdf-f4a8-49c9-97a7-289a0c522fda/projects/694787"
               target="_blank"
