added contact page

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
           <a
             href="https://fanciful-pavlova-b6701d.netlify.app/"
             target="_blank"
-            title="Launch Weather App"
+            title="Launch Croissant Website"
             ><img
               src="/images/croissants.jpeg"
               alt="Croissants"
