added navbar to all pages

--- a/about.html
+++ b/about.html
@@ -29,10 +29,59 @@
     <title>About Me | Jen Strayer</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top shadow">
+      <div class="container">
+        <a class="navbar-brand" href="/">Jen Strayer</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/" title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                href="/about.html"
+                title="About Jen Strayer"
+                >About Me</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/portfolio.html" title="View Portfolio"
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/contact.html"
+                title="Contact Jen Strayer"
+                >Contact Me</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="secondary-hero">
       <h1 class="mb-5">About Me</h1>
       <a
-        href="#"
+        href="/contact.html"
         class="btn btn-success primary-button"
         title="Contact Jen Strayer"
         >Contact Me</a
@@ -54,7 +103,7 @@
               Nashville Predators!
             </p>
             <a
-              href="/#projects"
+              href="/portfolio.html"
               class="btn btn-success primary-button mt-4"
               title="View My Projects"
               >View My Projects</a
