--- a/index.html
+++ b/index.html
@@ -80,8 +80,20 @@
       </div>
     </nav>
     <div class="hero">
-      <h1 class="pb-2">Jen Strayer</h1>
-      <h2 class="pb-5">Front-End Developer Based In Nashville, TN</h2>
+      <div class="d-flex justify-content-center">
+        <div>
+          <img
+            src="/images/profile-pic.jpeg"
+            alt="Jen Strayer"
+            class="img-fluid header-img d-none d-lg-block"
+          />
+        </div>
+        <div>
+          <h1 class="pb-2">Jen Strayer</h1>
+
+          <h2 class="pb-5">Front-End Developer Based In Nashville, TN</h2>
+        </div>
+      </div>
       <a
         href="#"
         class="btn btn-success primary-button"
@@ -141,5 +153,46 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="container">
+        <div
+          class="work-inquiry d-none d-md-flex justify-content-between shadow"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together!</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              title="Contact Jen Strayer"
+              class="btn btn-success primary-button mt-3"
+              >Contact Me</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="bottom-bar d-flex justify-content-between">
+        <div><p>Jen Strayer 2022</p></div>
+        <div class="social-links">
+          <a href="mailto:jstraye1@gmail.com" target="_blank" title="Email"
+            ><i class="fa-solid fa-envelope-circle-check"></i></a
+          ><a
+            href="https://www.facebook.com/jstraye1/"
+            target="_blank"
+            title="Facebook"
+            ><i class="fa-brands fa-facebook"></i></a
+          ><a
+            href="https://www.instagram.com/jen.strayer/"
+            target="_blank"
+            title="Instagram"
+            ><i class="fa-brands fa-instagram"></i></a
+          ><a href="https://github.com/jstraye1/" target="_blank" title="GitHub"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
