updated footer with github link

--- a/contact.html
+++ b/contact.html
@@ -96,5 +96,35 @@
         >
       </p>
     </div>
+    <footer class="mt-5">
+      <div class="bottom-bar d-flex justify-content-between">
+        <div>
+          <p>
+            <a
+              href="https://github.com/jstraye1/portfolio-project"
+              target="_blank"
+              title="GitHub Project"
+              >Open-Source Code</a
+            >
+            by Jen Strayer
+          </p>
+        </div>
+        <div class="social-links">
+          <a
+            href="mailto:jstraye1@gmail.com"
+            target="_blank"
+            title="Email Jen Strayer"
+            ><i class="fa-solid fa-envelope-circle-check"></i></a
+          ><a
+            href="https://www.instagram.com/jen.strayer/"
+            target="_blank"
+            title="Instagram"
+            ><i class="fa-brands fa-instagram"></i></a
+          ><a href="https://github.com/jstraye1/" target="_blank" title="GitHub"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
