--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
       </div>
       <a
-        href="#"
+        href="/contact.html"
         class="btn btn-success primary-button"
         title="Contact Jen Strayer"
         >Contact Me</a
@@ -174,15 +174,23 @@
         </div>
       </div>
       <div class="bottom-bar d-flex justify-content-between">
-        <div><p>Jen Strayer 2022</p></div>
+        <div>
+          <p>
+            <a
+              href="https://github.com/jstraye1/portfolio-project"
+              target="_blank"
+              title="GitHub Project"
+              >Open-Source Code</a
+            >
+            by Jen Strayer
+          </p>
+        </div>
         <div class="social-links">
-          <a href="mailto:jstraye1@gmail.com" target="_blank" title="Email"
-            ><i class="fa-solid fa-envelope-circle-check"></i></a
-          ><a
-            href="https://www.facebook.com/jstraye1/"
+          <a
+            href="mailto:jstraye1@gmail.com"
             target="_blank"
-            title="Facebook"
-            ><i class="fa-brands fa-facebook"></i></a
+            title="Email Jen Strayer"
+            ><i class="fa-solid fa-envelope-circle-check"></i></a
           ><a
             href="https://www.instagram.com/jen.strayer/"
             target="_blank"
