--- a/portfolio.html
+++ b/portfolio.html
@@ -124,5 +124,53 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="container">
+        <div
+          class="work-inquiry d-none d-md-flex justify-content-between shadow"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together!</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              title="Contact Jen Strayer"
+              class="btn btn-success primary-button mt-3"
+              >Contact Me</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="bottom-bar d-flex justify-content-between">
+        <div>
+          <p>
+            <a
+              href="https://github.com/jstraye1/portfolio-project"
+              target="_blank"
+              title="GitHub Project"
+              >Open-Source Code</a
+            >
+            by Jen Strayer
+          </p>
+        </div>
+        <div class="social-links">
+          <a
+            href="mailto:jstraye1@gmail.com"
+            target="_blank"
+            title="Email Jen Strayer"
+            ><i class="fa-solid fa-envelope-circle-check"></i></a
+          ><a
+            href="https://www.instagram.com/jen.strayer/"
+            target="_blank"
+            title="Instagram"
+            ><i class="fa-brands fa-instagram"></i></a
+          ><a href="https://github.com/jstraye1/" target="_blank" title="GitHub"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
