updated footer for mobile

--- a/about.html
+++ b/about.html
@@ -79,13 +79,7 @@
       </div>
     </nav>
     <div class="secondary-hero">
-      <h1 class="mb-5">About Me</h1>
-      <a
-        href="/contact.html"
-        class="btn btn-success primary-button"
-        title="Contact Jen Strayer"
-        >Contact Me</a
-      >
+      <h1>About Me</h1>
     </div>
     <div class="container mt-5 mb-5">
       <div class="row">
@@ -105,8 +99,8 @@
             <a
               href="/portfolio.html"
               class="btn btn-success primary-button mt-4"
-              title="View My Projects"
-              >View My Projects</a
+              title="View Portfolio"
+              >View My Portfolio</a
             >
           </div>
         </div>
@@ -122,7 +116,7 @@
     <footer>
       <div class="container">
         <div
-          class="work-inquiry d-none d-md-flex justify-content-between shadow"
+          class="work-inquiry d-block d-md-flex justify-content-between shadow"
         >
           <div>
             <h4>Work Inquiry</h4>
@@ -156,11 +150,6 @@
             target="_blank"
             title="Email Jen Strayer"
             ><i class="fa-solid fa-envelope-circle-check"></i></a
-          ><a
-            href="https://www.instagram.com/jen.strayer/"
-            target="_blank"
-            title="Instagram"
-            ><i class="fa-brands fa-instagram"></i></a
           ><a href="https://github.com/jstraye1/" target="_blank" title="GitHub"
             ><i class="fa-brands fa-github"></i
           ></a>
