--- a/index.html
+++ b/index.html
@@ -92,14 +92,15 @@
           <h1 class="pb-2">Jen Strayer</h1>
 
           <h2 class="pb-5">Front-End Developer Based In Nashville, TN</h2>
+
+          <a
+            href="/contact.html"
+            class="btn btn-success primary-button"
+            title="Contact Jen Strayer"
+            >Contact Me</a
+          >
         </div>
       </div>
-      <a
-        href="/contact.html"
-        class="btn btn-success primary-button"
-        title="Contact Jen Strayer"
-        >Contact Me</a
-      >
     </div>
     <h3 class="text-center mt-5 mb-5" id="projects">Featured Projects</h3>
     <div class="container">
@@ -157,7 +158,7 @@
     <footer>
       <div class="container">
         <div
-          class="work-inquiry d-none d-md-flex justify-content-between shadow"
+          class="work-inquiry d-block d-md-flex justify-content-between shadow"
         >
           <div>
             <h4>Work Inquiry</h4>
@@ -191,11 +192,6 @@
             target="_blank"
             title="Email Jen Strayer"
             ><i class="fa-solid fa-envelope-circle-check"></i></a
-          ><a
-            href="https://www.instagram.com/jen.strayer/"
-            target="_blank"
-            title="Instagram"
-            ><i class="fa-brands fa-instagram"></i></a
           ><a href="https://github.com/jstraye1/" target="_blank" title="GitHub"
             ><i class="fa-brands fa-github"></i
           ></a>
