--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
               class="img-fluid portfolio-img"
           /></a>
           <h3 class="text-center mt-2">Weather App</h3>
-          <p class="text-center pb-4">Javascript, CSS, HTML</p>
+          <p class="text-center text-muted pb-4">Javascript, CSS, HTML</p>
         </div>
         <div class="col-lg-4 col-md-6">
           <a
@@ -107,7 +107,7 @@
               class="img-fluid portfolio-img"
           /></a>
           <h3 class="text-center mt-2">Ice Hockey Page</h3>
-          <p class="text-center pb-4">Javascript, CSS, HTML</p>
+          <p class="text-center text-muted pb-4">Javascript, CSS, HTML</p>
         </div>
         <div class="col-lg-4 col-md-6">
           <a
@@ -120,14 +120,14 @@
               class="img-fluid portfolio-img"
           /></a>
           <h3 class="text-center mt-2">All About Croissants</h3>
-          <p class="text-center">CSS, HTML</p>
+          <p class="text-center text-muted">CSS, HTML</p>
         </div>
       </div>
     </div>
     <footer>
       <div class="container">
         <div
-          class="work-inquiry d-none d-md-flex justify-content-between shadow"
+          class="work-inquiry d-block d-md-flex justify-content-between shadow"
         >
           <div>
             <h4>Work Inquiry</h4>
@@ -161,11 +161,6 @@
             target="_blank"
             title="Email Jen Strayer"
             ><i class="fa-solid fa-envelope-circle-check"></i></a
-          ><a
-            href="https://www.instagram.com/jen.strayer/"
-            target="_blank"
-            title="Instagram"
-            ><i class="fa-brands fa-instagram"></i></a
           ><a href="https://github.com/jstraye1/" target="_blank" title="GitHub"
             ><i class="fa-brands fa-github"></i
           ></a>
