--- a/contact.html
+++ b/contact.html
@@ -90,13 +90,31 @@
         >
       </p>
       <h3><i class="fa-brands fa-github"></i> GitHub</h3>
-      <p class="pb-4">
+      <p class="pb-4 mb-5">
         <a href="https://github.com/jstraye1/" target="_blank"
           >https://github.com/jstraye1/</a
         >
       </p>
     </div>
-    <footer class="mt-5">
+    <footer>
+      <div class="container">
+        <div
+          class="work-inquiry d-block d-md-flex justify-content-between shadow"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together!</p>
+          </div>
+          <div>
+            <a
+              href="/portfolio.html"
+              title="View Portfolio"
+              class="btn btn-success primary-button mt-3"
+              >View My Portfolio</a
+            >
+          </div>
+        </div>
+      </div>
       <div class="bottom-bar d-flex justify-content-between">
         <div>
           <p>
@@ -115,11 +133,6 @@
             target="_blank"
             title="Email Jen Strayer"
             ><i class="fa-solid fa-envelope-circle-check"></i></a
-          ><a
-            href="https://www.instagram.com/jen.strayer/"
-            target="_blank"
-            title="Instagram"
-            ><i class="fa-brands fa-instagram"></i></a
           ><a href="https://github.com/jstraye1/" target="_blank" title="GitHub"
             ><i class="fa-brands fa-github"></i
           ></a>
