--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Jen Strayer is a Front-End Developer based just outside of Nashville, TN.  She holds a degree in Music Education and Euphonium Performance from Ithaca College in Ithaca, NY. After five years of teaching, she transitioned to a career in website development."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -87,14 +91,14 @@
           <div class="about-description">
             <h2 class="pb-2">Hi, I'm Jen Strayer</h2>
             <p class="text-muted">
-              Based just outside of Nashville, TN, I am Front-End Web Developer.
-              I hold a degree in Music Education and Euphonium Performance from
-              Ithaca College in Ithaca, NY, and, after teaching for five years
-              throughout Middle Tennessee, I made the transition into website
-              development. Outside of playing the euphonium, I also enjoy
-              playing the ukulele, listening to Broadway musicals, and playing
-              and watching ice hockey - often cheering on my favorite team, the
-              Nashville Predators!
+              I am Front-End Web Developer that is based just outside of
+              Nashville, TN. I hold a degree in Music Education and Euphonium
+              Performance from Ithaca College in Ithaca, NY, and, after teaching
+              for five years throughout Middle Tennessee, I made the transition
+              into website development. Outside of playing the euphonium, I also
+              enjoy playing the ukulele, listening to Broadway musicals, and
+              playing and watching ice hockey - often cheering on my favorite
+              team, the Nashville Predators!
             </p>
             <a
               href="/portfolio.html"
