--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="View Jen Strayer's current website projects."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -103,7 +107,7 @@
             title="Launch Hockey Page"
             ><img
               src="/images/hockey.png"
-              alt="Weather App"
+              alt="Hockey Skates and Gloves"
               class="img-fluid portfolio-img"
           /></a>
           <h3 class="text-center mt-2">Ice Hockey Page</h3>
